--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,6 @@ address {
     color: white;
 }
 
-.btn-sm {
-    height: 45px;
-    width: 120px;
-}
-
 .bold {
     font-weight: 600;
 }
@@ -58,10 +53,26 @@ address {
 }
 
 .carousel-item {
-    height: 900px;
+    height: 400px;
 }
 
 .carousel-item img {
     min-height: 100%;
+    min-width: 100%;
     margin: auto;
+}
+
+#carouselButton {
+    margin: auto;
+    z-index: 1;
+}
+
+.modal {
+    color: #0f0f0f;
+}
+
+.close {
+    text-align: right;
+    margin-top: 20px;
+    margin-right: 20px;
 }
